<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-88dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registrasre"
                android:textSize="34sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edtnombre_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/nombre__completo_label"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="#000000" />


        <EditText
            android:id="@+id/edtemail_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="#020202" />

        <EditText
            android:id="@+id/edtpass_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btncrearuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#3F51B5"
            android:elevation="5dp"
            android:onClick="validar"
            android:text="@string/crear_cuenta_label"
            android:textColor="#fff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ya_tienes_cuenta_label"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_ir_inicioSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:onClick="Iniciar"
                android:text="@string/iniciar_session_label"
                android:textColor="#000000" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>